update folder cards

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <!-- Ohlaville -->
             <div class="col-md-3">
                 <div class="card h-100 ">
-                    <img src="/assets/img/cards/OHLAVILLE.jpg" class="card-img-top img-fluid" alt="Ohlaville">
+                    <img src="./assets/cards/OHLAVILLE.jpg" class="card-img-top img-fluid" alt="Ohlaville">
                     <div class="card-body text-center">
                         <h5 class="card-title">OHLAVILLE</h5>
                         <p class="card-text">BOGOTÁ</p>
@@ -187,7 +187,7 @@
             <!-- Andrea Bocelli -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/BOCELLI.jpg" class="card-img-top img-fluid" alt="Andrea Bocelli">
+                    <img src="./assets/cards/BOCELLI.jpg" class="card-img-top img-fluid" alt="Andrea Bocelli">
                     <div class="card-body text-center">
                         <h5 class="card-title">ANDREA BOCELLI</h5>
                         <p class="card-text">BOGOTÁ</p>
@@ -201,7 +201,7 @@
             <!-- Andrés Cepeda -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/CEPEDA.jpg" class="card-img-top" alt="Andrés Cepeda">
+                    <img src="./assets/cards/CEPEDA.jpg" class="card-img-top" alt="Andrés Cepeda">
                     <div class="card-body text-center">
                         <h5 class="card-title">ANDRÉS CEPEDA</h5>
                         <p class="card-text">MULTIPLES CIUDADES</p>
@@ -215,7 +215,7 @@
             <!-- Aventura -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/AVENTURA.jpg" class="card-img-top" alt="Apolo 7">
+                    <img src="./assets/cards/AVENTURA.jpg" class="card-img-top" alt="Apolo 7">
                     <div class="card-body text-center">
                         <h5 class="card-title">AVENTURA</h5>
                         <p class="card-text">MULTIPLES CIUDADES</p>
@@ -229,7 +229,7 @@
             <!-- Drunk Comedy -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/DRUNK.jpg" class="card-img-top" alt="Aventura">
+                    <img src="./assets/cards/DRUNK.jpg" class="card-img-top" alt="Aventura">
                     <div class="card-body text-center">
                         <h5 class="card-title">DRUNK COMEDY</h5>
                         <p class="card-text">BOGOTA</p>
@@ -237,13 +237,13 @@
                     <div class="card-footer text-center bg-primary">
                         <a href="#" class="btn btn-primary w-50 text-white bg-primary">Ver Eventos</a>
                     </div>
-                </div>
+                </div> 
             </div>
 
             <!-- Astrobar -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/ASTROBAR.jpg" class="card-img-top" alt="Barranquilla Brilla con Elite">
+                    <img src="./assets/cards/ASTROBAR.jpg" class="card-img-top" alt="Barranquilla Brilla con Elite">
                     <div class="card-body text-center">
                         <h5 class="card-title">ASTROBAR</h5>
                         <p class="card-text">CHIA</p>
@@ -257,7 +257,7 @@
             <!-- Bresh -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/BRESH.jpg" class="card-img-top" alt="Bresh">
+                    <img src="./assets/cards/BRESH.jpg" class="card-img-top" alt="Bresh">
                     <div class="card-body text-center">
                         <h5 class="card-title">BRESH</h5>
                         <p class="card-text">BOGOTÁ</p>
@@ -271,7 +271,7 @@
             <!-- Vassar Feria -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/VASSAR.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/VASSAR.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">VASSAR FERIA</h5>
                         <p class="card-text">BOGOTA</p>
@@ -285,7 +285,7 @@
             <!-- Ferxxo -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/FERXXO.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/FERXXO.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">FERXXO</h5>
                         <p class="card-text">MEDELLIN</p>
@@ -299,7 +299,7 @@
             <!-- Festival Estéreo Picnic 2025 -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/ESTEREO.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/ESTEREO.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">FESTIVAL ESTÉREO PICNIC 2025</h5>
                         <p class="card-text">BOGOTÁ</p>
@@ -313,7 +313,7 @@
             <!-- Festival las chelas -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/CHELAS.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/CHELAS.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">FESTIVAL LAS CHELAS</h5>
                         <p class="card-text">CALI</p>
@@ -327,7 +327,7 @@
             <!-- Fonseca -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/FONSECA.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/FONSECA.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">FONSECA</h5>
                         <p class="card-text">MULTIPLES CIUDADES</p>
@@ -341,7 +341,7 @@
             <!-- Grata 2025 -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/GRATA.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/GRATA.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">GRATA 2025</h5>
                         <p class="card-text">CARTAGENA</p>
@@ -355,7 +355,7 @@
             <!-- Haash -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/HAASH.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/HAASH.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">HAASH</h5>
                         <p class="card-text">BOGOTA</p>
@@ -369,7 +369,7 @@
             <!-- I love 90S -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/LOVE90S.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/LOVE90S.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">I LOVE 20S</h5>
                         <p class="card-text">MULTIPLES CIUDADES</p>
@@ -383,7 +383,7 @@
             <!-- JUANPIS LIVE SHOW -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/JUANPIS.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/JUANPIS.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">JUANPIS LIVE SHOW</h5>
                         <p class="card-text">SHOW</p>
@@ -397,7 +397,7 @@
             <!-- La ultima del año con Afrosound -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/AFROSOUND.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/AFROSOUND.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">LA ULTIMA DEL AÑO CON AFROSOUND</h5>
                         <p class="card-text">BOGOTA</p>
@@ -411,7 +411,7 @@
             <!-- Les Jeudis du Pasteur -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/PASTEUR.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/PASTEUR.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">LES JEUDIS DU PASTEUR</h5>
                         <p class="card-text">BOGOTA</p>
@@ -425,7 +425,7 @@
             <!-- Maca & Gero -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/MACA.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/MACA.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">MAKA & GERO</h5>
                         <p class="card-text">BOGOTA</p>
@@ -439,7 +439,7 @@
             <!-- Mareh -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/MAREH.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/MAREH.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">MAREH</h5>
                         <p class="card-text">BOGOTA</p>
@@ -453,7 +453,7 @@
             <!-- New Year Eve Party -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/YEARPARTY.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/YEARPARTY.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">NEW YEAR EVE PARTY</h5>
                         <p class="card-text">GUACHACA</p>
@@ -467,7 +467,7 @@
             <!-- Nina Kraviz -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/NINA.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/NINA.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">NIÑA KRAVIZ</h5>
                         <p class="card-text">BOGOTA</p>
@@ -481,7 +481,7 @@
             <!-- Paula Arenas -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/PAULA.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/PAULA.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">PAULA ARENAS</h5>
                         <p class="card-text">BOGOTA</p>
@@ -495,7 +495,7 @@
             <!-- Pierce The Evil -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/PIERCE.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/PIERCE.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">PIERCE THE VEIL</h5>
                         <p class="card-text">BOGOTA</p>
@@ -509,7 +509,7 @@
             <!-- Puerto candelaria -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/CANDELARIA.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/CANDELARIA.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">PUERTO CANDELARIA</h5>
                         <p class="card-text">BOGOTA</p>
@@ -523,7 +523,7 @@
             <!-- Shakira -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/SHAKIRA.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/SHAKIRA.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">SHAKIRA</h5>
                         <p class="card-text">MULTIPLES CIUDADES</p>
@@ -537,7 +537,7 @@
             <!-- Bresh -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/BRESH.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/BRESH.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">BRESH</h5>
                         <p class="card-text">MEDELLIN</p>
@@ -551,7 +551,7 @@
             <!-- Siddhartha -->
             <div class="col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/img/cards/SIDD.jpg" class="card-img-top" alt="Drunk Comedy">
+                    <img src="./assets/cards/SIDD.jpg" class="card-img-top" alt="Drunk Comedy">
                     <div class="card-body text-center">
                         <h5 class="card-title">SIDDHARTHA</h5>
                         <p class="card-text">BOGOTA</p>
