--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
         </div>
     
         <div class="contact">
-            <img class="img_banner" src="/assets/iconos/241119161638233_banner_BANNERS-WEB_WS_1.gif" alt="">
+            <img class="img_banner" src="./assets/iconos/241119161638233_banner_BANNERS-WEB_WS_1.gif" alt="">
 
             <div class="social">
                 <a href="#">🐦 Siguenos </a>
